--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="css/common.css" rel="stylesheet" type="text/css">
+    <link href="css/style.css" rel="stylesheet" type="text/css">
+    <title>Bulls and Cows Game</title>
 </head>
 <body>
-    <p>Hello</p>
+    <div class="">
+        <form action="">
+
+            <input id="" class="userInput" type="text" maxlength="4" name="" placeholder="1234">
+
+          </form>
+    </div>
 </body>
 </html>
