--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
     <title>Bulls and Cows Game</title>
 </head>
 <body>
-    <div class="">
-        <form action="">
+    <div class="wrapper">
+        <form class="userForm" action="">
 
-            <input id="" class="userInput" type="text" maxlength="4" name="" placeholder="1234">
+            <input id="" class="userInput" type="tel" maxlength="4" name="" placeholder="1234">
 
           </form>
-    </div>
+    </div> <!--end wrapper-->
 </body>
+<script type="text/javascript" src="js/scripts.js"></script>
 </html>
