--- a/index.html
+++ b/index.html
@@ -10,11 +10,15 @@
 </head>
 <body>
     <div class="wrapper">
+        
+        <button id="" onclick="generateNumber()">New Game</button>
         <form class="userForm" action="">
 
-            <input id="" class="userInput" type="tel" maxlength="4" name="" placeholder="1234">
+            <input class="classUserInput" type="tel" id="userInput" onchange="getUserInput()" name="num" value="" maxlength="4">
+            <a class="">CHECK</a>
 
           </form>
+          <div class="" id="answer"></div>
     </div> <!--end wrapper-->
 </body>
 <script type="text/javascript" src="js/scripts.js"></script>
