--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
         <form class="userForm" action="">
 
             <input class="classUserInput" type="tel" id="userInput" onchange="getUserInput()" name="num" value="" maxlength="4">
-            <a class="">CHECK</a>
+            <a class="check">CHECK</a>
 
           </form>
-          <div class="" id="answer"></div>
+          <div class="userSugestions" id="answer"></div>
+          <div id="userGuess" class="userGuessIt"></div>
     </div> <!--end wrapper-->
 </body>
 <script type="text/javascript" src="js/scripts.js"></script>
