--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,20 +8,31 @@
     <link href="css/common.css" rel="stylesheet" type="text/css">
     <link href="css/style.css" rel="stylesheet" type="text/css">
     <title>Bulls and Cows Game</title>
+
 </head>
+
 <body>
     <div class="wrapper">
-        
-        <button id="" onclick="generateNumber()">New Game</button>
+
+        <!-- <button id="" onclick="generateNumber()">New Game</button> -->
         <form class="userForm" action="">
 
-            <input class="classUserInput" type="tel" id="userInput" onchange="getUserInput()" name="num" value="" maxlength="4">
+            <input class="classUserInput" type="tel" id="userInput" onchange="getUserInput()" name="num" value=""
+                maxlength="4">
             <a class="check">CHECK</a>
 
-          </form>
-          <div class="userSugestions" id="answer"></div>
-          <div id="userGuess" class="userGuessIt"></div>
-    </div> <!--end wrapper-->
+        </form>
+        <div class="userSugestions" id="answer"></div>
+        <div id="userGuess" class="userGuessIt"></div>
+        <div id="newGame"></div>
+    </div>
+    <!--end wrapper-->
 </body>
 <script type="text/javascript" src="js/scripts.js"></script>
+<script>
+    (function () {
+        generateNumber();
+    })();
+</script>
+
 </html>
