--- a/index.html
+++ b/index.html
@@ -18,10 +18,15 @@
         <div>
             <a href="start.html" class="playButton" alt="start">Guess It!</a>
         </div>
+        <div class="infoBtn">
+            <a href="rules.html" class="rules left">Rules</a>
+            <a href="howToPlay.html" class="howToPlay right">How to play</a>
+        </div>
+        <div class="myInfo">
+            <p>&copy; 2022 <a href="yuchormanski@gmail.com" type="email">yuchormanski@gmail.com</a></p>
+        </div>
     </div>
-    <div class="myInfo">
-        <p>&copy; 2022 <a href="yuchormanski@gmail.com">yuchormanski@gmail.com</a></p>
-    </div>
+
 </body>
 
 </html>
