--- a/rules.html
+++ b/rules.html
@@ -8,6 +8,7 @@
     <link href="css/common.css" rel="stylesheet" type="text/css">
     <link href="css/startStyle.css" rel="stylesheet" type="text/css">
     <title>Bulls and Cows Game</title>
+    <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
 </head>
 
 <body>
