--- a/rules.html
+++ b/rules.html
@@ -17,7 +17,7 @@
             <p class="indent">
                 Bulls and Cows is a logic game to guess numbers. The numbers have to be with four digits and the digits
                 must be all different.
-                The game is played by one player against the computer and the player take turns to try to guess their computer's number.
+                The game is played by one player against the computer to try to guess their computer's number.
                 The computer responds with the number of matching digits. If they are in their right positions,
                 they are "bulls"; if in different positions, they are "cows".
             </p>
