--- a/rules.html
+++ b/rules.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="css/common.css" rel="stylesheet" type="text/css">
     <link href="css/startStyle.css" rel="stylesheet" type="text/css">
-    <title>Bulls and Cows Game</title>
+    <title>Bulls and Cows - Rules</title>
     <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
 </head>
 
