--- a/startB.html
+++ b/startB.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="css/common.css" rel="stylesheet" type="text/css">
     <link href="css/style.css" rel="stylesheet" type="text/css">
+    <link href="css/themeStyleBlack.css" rel="stylesheet" type="text/css">
     <title>Bulls and Cows</title>
     <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
 
@@ -14,9 +15,9 @@
 
 <body>
     <div class="wrapper">
-        <a href="startB.html" class="">
-            <img src="img/BW2.png" class="theme" alt="Black / White" />
-        </a>
+            <a href="start.html" class="">
+                <img src="img/BW2.png" class="theme" alt="Black / White" />
+            </a>
 
         <form class="userForm" action="">
 
@@ -30,7 +31,6 @@
         <div id="newGame"></div>
     </div>
     <!--end wrapper-->
-    
 </body>
 <script type="text/javascript" src="js/scripts.js"></script>
 <script>
