--- a/start.html
+++ b/start.html
@@ -15,7 +15,7 @@
 <body>
     <div class="wrapper">
         <a href="startB.html" class="">
-            <img src="img/BW2.png" class="theme" alt="Black / White" />
+            <img src="img/BW2.png" class="theme" alt="Black / White" max-width="65px" />
         </a>
 
         <form class="userForm" action="">
