--- a/start.html
+++ b/start.html
@@ -20,8 +20,7 @@
 
         <form class="userForm" action="">
 
-            <input class="classUserInput" type="tel" id="userInput" onchange="getUserInput()" name="num" value=""
-                maxlength="4">
+            <input class="classUserInput" type="tel" id="userInput" onchange="getUserInput()" name="num" value="" maxlength="4">
             <a class="check">CHECK</a>
 
         </form>
