--- a/startB.html
+++ b/startB.html
@@ -21,9 +21,9 @@
 
         <form class="userForm" action="">
 
-            <input class="classUserInput" type="tel" id="userInput" onchange="getUserInput()" name="num" value=""
-                maxlength="4">
-            <a class="check">CHECK</a>
+            <input class="classUserInput" type="tel" id="userInput"  name="num" value="" maxlength="4"> 
+            <a class="check" onclick="getUserInput()">CHECK</a>
+            <!-- onchange="getUserInput()" -->
 
         </form>
         <div class="userSuggestions" id="answer"></div>
