--- a/start.html
+++ b/start.html
@@ -20,8 +20,8 @@
 
         <form class="userForm" action="">
 
-            <input class="classUserInput" type="tel" id="userInput" onchange="getUserInput()" name="num" value="" maxlength="4">
-            <a class="check">CHECK</a>
+            <input class="classUserInput" type="tel" id="userInput" onfocus="this.value=''" name="num" value="" maxlength="4">
+            <a class="check" onclick="getUserInput()">CHECK</a>
 
         </form>
         <div class="userSuggestions" id="answer"></div>
