--- a/startB.html
+++ b/startB.html
@@ -22,7 +22,7 @@
         <form class="userForm" action="">
 
             <input class="classUserInput" type="tel" id="userInput"  name="num" value="" maxlength="4"> 
-            <a class="check" onclick="getUserInput()">CHECK</a>
+            <a class="check" onclick="getUserInput(), document.getElementById('userInput').value = ''">CHECK</a>
             <!-- onchange="getUserInput()" -->
 
         </form>
