--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
         <div class="infoBtn">
             <a href="rules.html" class="rules left">Rules</a>
-            <a href="howToPlay.html" class="howToPlay right">About the game</a>
+            <a href="about.html" class="howToPlay right">About the game</a>
         </div>
         <div class="myInfo">
             <p>&copy; 2022 <a href="yuchormanski@gmail.com" type="email">yuchormanski@gmail.com</a></p>
