added back button

--- a/about.html
+++ b/about.html
@@ -35,6 +35,11 @@
             <p>
                 Try it! Guess the number and tell me your opinion! I'll like to hear another opinion!
             </p>
+            <br><br>
+            <p>
+                changes:
+                <li>added "back" button</li>
+            </p>
         <div class="infoBtn">
             <a href="index.html" class="backToPlay">Back</a>
         </div>
