--- a/start.html
+++ b/start.html
@@ -14,8 +14,11 @@
 
 <body>
     <div class="wrapper">
+        <a href="index.html" class="">
+            <img src="img/back.png" class="theme back" alt="Black / White" max-width="65px" />
+        </a>
         <a href="startB.html" class="">
-            <img src="img/BW3_shadow.png" class="theme" alt="Black / White" max-width="65px" />
+            <img src="img/BW3_shadow.png" class="theme bull" alt="Black / White" max-width="65px" />
         </a>
 
         <form class="userForm" action="">
