--- a/startB.html
+++ b/startB.html
@@ -15,8 +15,11 @@
 
 <body>
     <div class="wrapper">
+        <a href="index.html" class="">
+            <img src="img/backD.png" class="theme back" alt="Black / White" max-width="65px" />
+        </a>
             <a href="start.html" class="">
-                <img src="img/BW3_shadowDark.png" class="theme" alt="Black / White" max-width="65px"/>
+                <img src="img/BW3_shadowDark.png" class="theme bull" alt="Black / White" max-width="65px"/>
             </a>
 
         <form class="userForm" action="">
