new back button

--- a/start.html
+++ b/start.html
@@ -15,7 +15,7 @@
 <body>
     <div class="wrapper">
         <a href="index.html" class="">
-            <img src="img/back.png" class="theme back" alt="Black / White" max-width="65px" />
+            <img src="img/backBtn.png" class="theme back" alt="Black / White" max-width="65px" />
         </a>
         <a href="startB.html" class="">
             <img src="img/BW3_shadow.png" class="theme bull" alt="Black / White" max-width="65px" />
