some fixes; js theme styles; result list reorder

--- a/about.html
+++ b/about.html
@@ -13,33 +13,36 @@
 
 <body>
     <div class="wrapper">
-        <p class="info">This game is build as a custom project as a way to test new learned skills in Javascript language while
+        <p class="info">This game is build as a custom project as a way to test new learned skills in Javascript
+            language while
             studying in Softuni. Everything is writhen and there is nothing "copy-paste"-ed in order to gain and
             practising the new learned skills.
-            The main purpose was logic, after that the front end and design. As game requirements are - user to gues the
-            random generated number. The machine answers according users input number is there a part of it that is
-            included or is on the exact place and so on ...
+
             The game is not а part of homework or other exercise from the course in Softuni. It a private decision and
             as such it brings some mistakes and incompleteness.
+
             I tried to do every part of the project including "FavIcon" - stupid pixel by pixel drawing. The only part
-            that is web resource is bull head to change the background, also moded by me in two colors according
+            that is web resource is bull head for background changing, but also moded by me in two colors according
             requirements of the theme.
             And ,yes , the dark theme is inspired by the GutHub dark theme...</p>
         <p class="info">
-            Of course ,there was some people that helped me with advices and opinion.
-            Thanks a lot to my mentor Plamen Popov for his priceless advices and his patience!
-            Thanks to Atanas Dimitrov and Valentina Lozeva for beta testing!</p>
-            <p>
-                The project is in beta stage. Because of that there is no active links to other persons. 
-            </p>
-            <p>
-                Try it! Guess the number and tell me your opinion! I'll like to hear another opinion!
-            </p>
-            <br><br>
-            <p>
-                changes:
-                <li>added "back" button</li>
-            </p>
+            Thanks a lot to my mentor Plamen Popov for his advices and his patience!</p>
+        <p>
+            The project is not on final stage.
+        </p>
+        <p>
+            Try it! Guess the number and tell me your opinion!
+        </p>
+        <br><br>
+        <p>
+            TODO: clean the code
+        </p>
+        <p>
+            changes:
+            <li>changed functionality of theme button. No more reloading the page!</li>
+            <li>Last user number is added to the top of the list</li>
+            <li>added "back" button</li>
+        </p>
         <div class="infoBtn">
             <a href="index.html" class="backToPlay">Back</a>
         </div>
