--- a/start.html
+++ b/start.html
@@ -17,13 +17,15 @@
         <a href="index.html" class="">
             <img src="img/backBtn.png" class="theme back" alt="Black / White" max-width="65px" />
         </a>
-        <a href="startB.html" class="">
+        <!-- <a href="startB.html" class=""> -->
+        <a href="#" class="bullHead">
             <img src="img/BW3_shadow.png" class="theme bull" alt="Black / White" max-width="65px" />
         </a>
 
         <form class="userForm" action="">
 
-            <input class="classUserInput" type="tel" id="userInput" onfocus="this.value=''" name="num" value="" maxlength="4">
+            <input class="classUserInput" type="tel" id="userInput" onfocus="this.value=''" name="num" value=""
+                maxlength="4">
             <a class="check" onclick="getUserInput()">CHECK</a>
 
         </form>
@@ -32,7 +34,7 @@
         <div id="newGame"></div>
     </div>
     <!--end wrapper-->
-    
+
 </body>
 <script type="text/javascript" src="js/scripts.js"></script>
 <script>
